--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -59,6 +59,7 @@ h1 {
   font-size: max(2.2rem, 2.8vw);
   color: color("secondary");
   letter-spacing: -0.12rem;
+  line-height: 1.2;
 }
 
 h2 {
